fix(snackbar): Apply visibility hidden when at rest. fixes #1258

--- a/packages/mdc-snackbar/mdc-snackbar.scss
+++ b/packages/mdc-snackbar/mdc-snackbar.scss
@@ -69,6 +69,10 @@
     }
   }
 
+  &[aria-hidden] {
+    visibility: hidden;
+  }
+
   &--active {
     transform: translate(0);
     transition: mdc-animation-enter(transform, .25s);
